--- a/code/Platform/MainWindow.ui
+++ b/code/Platform/MainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>697</width>
+    <width>992</width>
     <height>752</height>
    </rect>
   </property>
@@ -34,14 +34,14 @@
        <widget class="QImageShow" name="ImageShow">
         <property name="minimumSize">
          <size>
-          <width>600</width>
-          <height>480</height>
+          <width>960</width>
+          <height>540</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>600</width>
-          <height>480</height>
+          <width>960</width>
+          <height>540</height>
          </size>
         </property>
        </widget>
@@ -103,7 +103,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>input_cut:</string>
+         <string>nCut:</string>
         </property>
        </widget>
       </item>
@@ -133,7 +133,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>barrel...aL:</string>
+         <string>nBarrelK0:</string>
         </property>
        </widget>
       </item>
@@ -163,7 +163,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>barrel...aS:</string>
+         <string>nBarrelK1:</string>
         </property>
        </widget>
       </item>
@@ -199,7 +199,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>697</width>
+     <width>992</width>
      <height>23</height>
     </rect>
    </property>
