--- a/code/Platform/MainWindow.ui
+++ b/code/Platform/MainWindow.ui
@@ -112,21 +112,11 @@
         <property name="maximum">
          <number>800</number>
         </property>
+        <property name="pageStep">
+         <number>2</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLineEdit" name="BC_nK0_le">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="readOnly">
-         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -142,6 +132,9 @@
         <property name="maximum">
          <number>800</number>
         </property>
+        <property name="pageStep">
+         <number>2</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -149,6 +142,19 @@
       </item>
       <item row="1" column="2">
        <widget class="QLineEdit" name="BC_nK1_le">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="readOnly">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLineEdit" name="BC_nK0_le">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -203,8 +209,8 @@
    <slot>Open()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>385</x>
-     <y>588</y>
+     <x>533</x>
+     <y>633</y>
     </hint>
     <hint type="destinationlabel">
      <x>485</x>
